model: implement Serializable with model classes
implement equals() and hashCode()